# snake-rs

./: Cargo.toml  README.md
assets/: index.html
assets/js/: game.js
src/: game.rs  main.rs
