[package]
name = "snake-rs"
version = "0.1.0"
authors = ["Ben K <benkornmeier@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.1.20"
tokio = "0.1.11"
tokio-io = "0.1"
futures = "0.1"
#hyper = "0.13"
#tokio = { version = "0.2", features = ["full"] }
#futures = "0.1"
#futures-preview = "0.3.0-alpha.19"
#futures-util-preview = "0.3.0-alpha.19"
#tokio = "0.2.0-alpha.6"
#tokio-executor = "=0.2.0-alpha.6"
log = "0.4"
simple_logger = "1.3.0"
serde_json = "1.0"
serde = "1.0"
