[package]
name = "snake-rs"
version = "0.1.0"
authors = ["Ben K <benkornmeier@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.1.20"
tokio = "0.1.11"
tokio-io = "0.1"
futures = {version = "0.1", features= ["with-deprecated"]}
log = "0.4"
simple_logger = "1.3.0"
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
#crossbeam = "0.7"
#crossbeam-channel = "0.4"
